# langchain-anthropic-rx-document-processor

./: .coverage  .env.example  .gitignore  DEMO.md  README.md  app.py  ingest.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
samples/: buyer_chaos.csv  reorder_list.csv  sms_edge_cases.txt  sms_orders.txt  sms_quick.txt
scripts/: make_pdf.py  make_slides.py
slides/: graphiterx_demo.pptx  rx_document_processor.pptx
src/: detector.py  exporters.py  extractors.py  llm.py  pipeline.py  schema.py  scrubber.py  storage.py
tests/: conftest.py  test_detector.py  test_exporters.py  test_extractors.py  test_pipeline.py  test_schema.py  test_scrubber.py  test_storage.py
