[project]
name = "graphiterx-demo"
version = "0.1.0"
description = "Universal order & document intake for healthcare commerce — PDF, CSV, SMS in; canonical PurchaseOrder out."
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
    "streamlit>=1.30",
]
