[project]
name = "graphiterx-demo"
version = "0.1.0"
description = "Universal order & document intake for healthcare commerce — PDF, CSV, SMS in; canonical PurchaseOrder out."
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
    "streamlit>=1.30",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-pptx>=1.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
filterwarnings = [
    # SQLite cleanup noise from python's gc — tests do close their connections,
    # but pytest's own AST recompile triggers a stale handle scan.
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    # Excluded: actual LLM call is mocked in tests; real-LLM integration is
    # exercised manually against bundled samples.
    "src/llm.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
